test/expected/explain_ati-c++20.out
explain _Atomic(int) x
                ^
17: error: "_Atomic int" is illegal for built-in type until C++23
